# beluga

./: .bazelignore  .bazelrc  .buildinfo  .clang-format  .clang-tidy  .cmake-format  .codecov.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .lcovrc  .pre-commit-config.yaml  BUILD.bazel  BaseParticleFilterPage.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  DenseGrid2Page.html  GETTING_STARTED.md  INSTALLING.md  LICENSE  LaserScanPage.html  LimiterPage.html  LinearGrid2Page.html  LocalizationPage.html  MODULE.bazel  MotionModelPage.html  OccupancyGrid2Page.html  OccupancyGrid2dPage.html  ParticleBaselineGenerationPage.html  ParticleContainerPage.html  ParticleFilterPage.html  ParticlePage.html  ParticleResamplingPage.html  ParticleSampledGenerationPage.html  README.md  REPO.bazel  RandomStateDistributionPage.html  (+1255 more)
beluga/: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  CHANGELOG.rst  CMakeLists.txt  MODULE.bazel  README.md  package.xml  run-clang-tidy.sh
beluga/cmake/: Config.cmake.in
beluga/core/: CMakeLists.txt
beluga/core/benchmark/: sampling_benchmark.cpp  spatial_hash_benchmark.cpp  storage_benchmark.cpp  tuple_vector_benchmark.cpp  voxel_hash_benchmark.cpp
beluga/core/test/: particle_filter_test.cpp  sampling_test.cpp  spatial_hash_test.cpp  storage_test.cpp  tuple_vector_test.cpp  voxel_hash_test.cpp
beluga/docs/: CMakeLists.txt  Doxyfile  README.md  _images  conf.py  css.css  doxygen_cites.bib  generate_docs.bash  generate_docs.sh  index.md
beluga/docs/_doxygen/: beluga-main.md
beluga/include/beluga/: 3d_embedding.hpp  actions.hpp  algorithm.h  algorithm.hpp  beluga.h  beluga.hpp  circular_array.hpp  containers.hpp  definitions.hpp  eigen_compatibility.hpp  estimation.hpp  localization.hpp  mixin.hpp  mixins.hpp  motion.h  motion.hpp  policies.hpp  primitives.hpp  random.hpp  resampling_policies.hpp  sensor.h  sensor.hpp  spatial_hash.h  spatial_hash.hpp  storage.hpp  testing.hpp  tuple_vector.h  tuple_vector.hpp  type_traits.h  type_traits.hpp  views.h  views.hpp
beluga/include/ciabatta/: ciabatta.hpp
beluga/src/: clang_tidy_findable.cpp
beluga/test/: BUILD.bazel  CMakeLists.txt
beluga/test/beluga/: BUILD.bazel  CMakeLists.txt  test_3d_embedding.cpp  test_circular_array.cpp  test_mixin.cpp  test_primitives.cpp  test_spatial_hash.cpp  test_storage.cpp  test_tuple_vector.cpp
beluga/test/benchmark/: BUILD.bazel  CMakeLists.txt  benchmark_likelihood_field_model.cpp  benchmark_low_variance_sample.cpp  (+6 more)
beluga_amcl/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
beluga_amcl/cmake/: ament.cmake  beluga_amcl-extras.cmake  catkin.cmake
beluga_amcl/config/: Amcl.cfg
beluga_amcl/docs/: Doxyfile  Makefile  PARAMETERS.md  _static  conf.py  index.md  ros2-reference.md
beluga_amcl/src/: amcl_node.cpp  amcl_node_utils.cpp  amcl_nodelet.cpp  main.cpp  ndt_amcl_node.cpp  ndt_amcl_node_3d.cpp  ndt_mcl_node.cpp  ndt_mcl_node_3d.cpp  particle_filtering.cpp  ros2_common.cpp
beluga_amcl/test/: .clang-tidy  CMakeLists.txt  amcl_nodelet.test  test_amcl_node.cpp  test_amcl_node_utils.cpp  test_amcl_nodelet.cpp  test_laser_scan.cpp  test_ndt_amcl_3d_node.cpp  test_ndt_amcl_node.cpp  test_ndt_mcl_3d_node.cpp  test_ndt_mcl_node.cpp  test_ros2_common.cpp
beluga_benchmark/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
beluga_benchmark/beluga_benchmark/: __init__.py  compare_results.py  exceptions.py  parameterized_run_compare.py  timem.py  timem_results.py
beluga_benchmark/config/: qos_override.yml
beluga_benchmark/docs/: BENCHMARKING.md  PROFILING.md
beluga_benchmark/launch/: beluga_ndt.launch  beluga_vs_nav2.launch
beluga_benchmark/params/: amcl.yaml  ndt_mcl.yaml
beluga_benchmark/scripts/: ndt_swept.robot  nominal.robot  swept.robot
beluga_example/: CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  package.xml
beluga_example/beluga_example/: __init__.py  launch_utils.py
beluga_example/cmake/: ament.cmake  catkin.cmake
beluga_example/config/: params.yaml
beluga_example/launch/: carpinchobot.launch.xml  example_component_launch.py  example_launch.py  example_rosbag.launch  example_rosbag_launch.py  ndt_replay_3d.launch.xml  ndt_simulation.launch.xml  ndt_simulation_3d.launch.xml  perfect_odometry.launch  perfect_odometry.launch.xml  perfect_odometry_launch.py  simulation.launch  simulation.launch.xml  simulation_launch.py
beluga_example/maps/: ekumen_hq_room_309.pgm  ekumen_hq_room_309.yaml
beluga_example/models/: turtlebot.model.yaml
beluga_example/params/: carpinchobot.yaml  default.ros.yaml  default.ros2.yaml  default.yaml  default_ndt.ros2.yaml  default_ndt_3d.ros2.yaml  ndt_default.ros2.yaml  nodelet.yaml
beluga_example/rviz/: amcl.ros2.rviz  carpinchobot_ekumen_hq_room_309.rviz  ndt_amcl_3d.ros2.rviz  rviz.ros.rviz  rviz.ros2.rviz  rviz.rviz
beluga_example/worlds/: turtlebot3_world.yaml
beluga_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg
beluga_ros/cmake/: ament.cmake  beluga_ros-extras.cmake.in  catkin.cmake
beluga_ros/docs/: Doxyfile  conf.py  index.md
beluga_ros/src/: amcl.cpp  ndt_ellipsoid.cpp
beluga_ros/test/: CMakeLists.txt  test_amcl.cpp  test_amcl_impl.cpp  test_laser_scan.cpp  test_messages.cpp  test_occupancy_grid.cpp  test_particle_cloud.cpp  test_point_cloud.cpp  test_sparse_point_cloud.cpp  test_tf2_sophus.cpp
beluga_ros/tools/: __init__.py  conversion_utils.py  occupancy_grid_to_ndt.py
beluga_system_tests/: .clang-tidy  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  run-clang-tidy.sh
beluga_system_tests/test/: CMakeLists.txt  test_system.cpp  test_system_new.cpp
beluga_tutorial/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
beluga_tutorial/cmake/: ament.cmake
beluga_tutorial/params/: landmark_map.yaml  tutorial.yaml
beluga_tutorial/scripts/: visualize.py
beluga_tutorial/src/: main.cpp  tutorial.py  tutorial_animation.py  visualization.py
beluga_vdb/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
beluga_vdb/cmake/: Config.cmake.in
beluga_vdb/test/: CMakeLists.txt
(+639 files in other folders)
