# Copyright 2025 Ekumen, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "beluga",
    version = "2.0.2",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")
bazel_dep(name = "onetbb", version = "2022.1.0")
bazel_dep(name = "package_metadata", version = "0.0.5")
bazel_dep(name = "range-v3", version = "0.12.0")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "sophus", version = "1.22.10.bcr.1")

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True)
bazel_dep(name = "rules_multirun", version = "0.13.0", dev_dependency = True)
