<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_benchmark</name>
  <version>2.0.0</version>

  <description>Scripts to benchmark, profile and compare beluga with other AMCL implementations.</description>

  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>
  <maintainer email="nespinosa@ekumenlabs.com">Nahuel Espinosa</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>beluga_amcl</exec_depend>
  <exec_depend>beluga_example</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">python3-pandas</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">python3-tk</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">cmake</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
